--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "groq": "^3.69.0",
+    "groq-sdk": "^0.12.0",
+    "kill-port": "^2.0.1",
     "mongoose": "^8.9.4",
     "node-fetch": "^2.7.0"
   }
