Added the input tag to set URL manually

--- a/docueaseui/public/manifest.json
+++ b/docueaseui/public/manifest.json
@@ -4,7 +4,9 @@
   "version": "1.0",
   "permissions": [
     "activeTab",
-    "scripting"
+    "scripting",
+    "tabs",
+    "activeTab"
   ],
   "background": {
     "service_worker": "background.js"
