--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "groq-sdk": "^0.12.0",
     "kill-port": "^2.0.1",
     "mongoose": "^8.9.4",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "plantuml-viewer": "^1.0.0"
   }
 }
