--- a/docueaseui/package.json
+++ b/docueaseui/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cheerio": "^1.0.0",
     "cra-template": "1.2.0",
     "plantuml-encoder": "^1.4.0",
+    "plantuml-viewer": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1"
